# CATalog

./: .dockerignore  .env-example  .gitignore  Dockerfile-DB  README.md  bcr.py  docker-compose.yml  init_db.sh  requirements.txt
src/backend/: Dockerfile  app.py  pyproject.toml  settings.py
src/backend/api/api_v1/: __init__.py
src/backend/api/api_v1/auth/: models.py  routes.py  views.py
src/backend/api/api_v1/categories/: models.py  routes.py  schemas.py  views.py
src/backend/api/api_v1/models/: __init__.py
src/backend/api/api_v1/products/: models.py  routes.py  schemas.py  views.py
src/backend/auth/: views.py
src/backend/categories/: routes.py
src/backend/core/: __init__.py  exceptions.py  settings_app.py
src/backend/core/database/: __init__.py  database.py  database_init.py  schemas.py
src/backend/core/database/models/: __init__.py  profile.py  user.py
src/backend/core/db_lib/base/: __init__.py  crud.py  session.py
src/backend/core/db_lib/sqlalchemy/: session.py
src/backend/core/decorators/: __init__.py  base64_login.py  base64_register.py  get_jwt_payload_and_token.py  jwt_required.py  login_jwt_required.py
src/backend/core/exceptions/: __init__.py  base_exceptions.py  messages.py
src/backend/core/mixins/: __init__.py  hashpw_mixin.py  jwt_mixin.py
src/backend/core/request/: __init__.py  token.py
src/backend/core/response/: __init__.py  messages.py  schemas.py
src/backend/core/settings/: database.py  settings_app.py
src/backend/core/settings/database/: __init__.py  user.py
src/backend/core/utils/: __init__.py  crud_util.py
src/backend/products/: views.py
src/backend/routes/: __init__.py  products.py
src/backend/users/: models.py  routes.py  views.py
src/frontend/telegram/: Dockerfile  bot.py  main.py  pyproject.toml  settings.py
src/frontend/telegram/api/: __init__.py  exc_crud_messages.py
src/frontend/telegram/api/categories/: categories_api.py  exceptions.py  schemas.py
src/frontend/telegram/api/products/: exceptions.py  products_api.py  schemas.py
src/frontend/telegram/api/users/: exceptions.py  schemas.py  users_api.py  users_controller.py
src/frontend/telegram/bot/: __init__.py  bot.py
src/frontend/telegram/bot/keyboards/: __init__.py  keyboard_actions.py  keyboard_actions_by_element.py  keyboard_list_actions.py  keyboard_yes_or_no.py
src/frontend/telegram/bot/states/: __init__.py  categories.py  products.py  users.py
src/frontend/telegram/broker_kafka/: __init__.py  broker.py  observer.py  schemas.py
src/frontend/telegram/core/: exceptions.py
src/frontend/telegram/core/database/: database_init.py  models.py
src/frontend/telegram/core/exceptions/: __init__.py  base_exceptions.py  messages.py
src/frontend/telegram/core/request/: __init__.py  bearer_auth.py
src/frontend/telegram/core/utils/: __init__.py  crud_util.py  paginator_helper.py  paginator_list_helper.py  send_message_util.py
src/frontend/telegram/handlers/: __init__.py  user_dataclasses.py
src/frontend/telegram/handlers/actions/: __init__.py  get_all_categories.py  get_all_products.py  get_product_by_name.py  get_products_by_exp_date.py
src/frontend/telegram/handlers/commands/: __init__.py  help.py  login.py  logout.py  start.py
src/frontend/telegram/handlers/messages_helper/: __init__.py  messages_main.py
src/frontend/telegram/handlers/product_actions/: create.py  update.py
src/frontend/telegram/keyboards/: __init__.py  keyboard_actions.py
src/frontend/telegram/states/: __init__.py  categories.py  products.py
src/notification_service/: Dockerfile  pyproject.toml  supervisord.ini
src/notification_service/core/: settings.py
src/notification_service/core/celery_config/: celery_app.py  schemas.py
src/notification_service/telegram/: beats.py  bot.py  broker.py  settings.py
src/notification_service/telegram/api/: __init__.py
src/notification_service/telegram/database/: __init__.py  crud_util.py  database_init.py  db_controller.py  models.py  schemas.py
src/notification_service/telegram/tasks/: task_notification_exp_products.py
(+131 files in other folders)
