[project]
name = "catalog"
version = "0.1.0"
description = ""
requires-python = "==3.12.9"
authors = [
    {name = "ykozhanov", email = "ykozhanov97@gmail.com" }
]
dependencies = [
    "sqlalchemy==2.0.36",
    "pydantic==2.10.4",
    "flask==3.1.0",
    "psycopg2==2.9.10",
    "python-dotenv==1.0.1",
    "bcrypt==4.2.1",
    "pyjwt==2.10.1",
    "email-validator==2.2.0",
    "celery[redis]==5.4.0",
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
