[project]
name = "notification-service-catalog"
version = "0.1.0"
description = ""
requires-python = "==3.13.0"
authors = ["ykozhanov <ykozhanov97@gmail.com>"]
dependencies = [
    "pytelegrambotapi==4.26.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "celery[redis]==5.4.0",
    "sqlalchemy==2.0.36",
    "requests==2.32.3",
]
